# taurus-face-recog

./: .gitignore  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
services/: __init__.py  exeptions.py
services/face_recognition/: __init__.py  utils.py  views.py
services/xml_response/: views.py
tests/: conftest.py
tests/fixtures/: empty_records_xls.xlsx
tests/test_services/: test_utils.py
xml_files/: 11081104.xml  12769177.xml  12825535.xml  13073474.xml  13851103.xml  14351825.xml  14385074.xml  14508559.xml  14869472.xml  15354765.xml  15723873.xml  15893280.xml  16133035.xml  16352780.xml  16476922.xml  16533083.xml  16595697.xml  16810508.xml  17670406.xml  17920720.xml  17960352.xml  18094093.xml  18515623.xml  18521846.xml  18689321.xml  19535733.xml  19777806.xml  25469263.xml  25900924.xml  25940534.xml  26104931.xml  26155952.xml  26570473.xml  26688464.xml  27407388.xml  29147580.xml  29408613.xml  29603485.xml  30277201.xml  30723943.xml  (+56 more)
